# tap-mock-fixture

./: LICENSE  README.md  meltano.yml  pyproject.toml
tap_mock_fixture/: __init__.py  client.py  streams.py  tap.py
tap_mock_incremental/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
