[tool.poetry]
name = "tap-mock-fixture"
version = "0.0.1"
description = "`tap-mock-fixture` is a Singer tap for MockFixture, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Bernard Wezeman <bernard.wezeman@quantile.nl>"]
keywords = [
    "ELT",
    "MockFixture",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.33.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.33.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_mock_fixture"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_mock_fixture"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-mock-fixture = 'tap_mock_fixture.tap:TapMockFixture.cli'
